--- a/r_so_multi_warehouse/static/description/index.html
+++ b/r_so_multi_warehouse/static/description/index.html
@@ -30,15 +30,10 @@
         </h2>
         
         <div style="display: inline-block;">
-          <a href="https://www.risolto.co.uk/appointment/5" target="_blank">
-            <h4
-              class="mt16 mb0"
-              style="padding: 16px 45px;text-transform: uppercase;background-color:#840032;text-align: center;box-shadow: 2px 1px 12px 3px #ece6e6;border-radius: 10px;color: #fff;font-weight: 700;"
-            >
+          <a href="https://www.risolto.co.uk/appointment/5"
+              style="padding: 16px 45px;margin-bottom:10px;text-transform: uppercase;background-color:#840032;text-align: center;box-shadow: 2px 1px 12px 3px #ece6e6;border-radius: 10px;color: #fff;font-weight: 700;" target="_blank">
               Get a Free 30 min Consultation.
-            </h4>
           </a>
-          <div>risolto.co.uk</div>
         </div>
       </div>
       <div class="row" style="display: block;margin-top:10px;text-align:center;">
@@ -50,9 +45,9 @@
           /></a>-->
         </div>
         <div style="display: flex; justify-content: center; align-items: center;">
-          <a target="_blank" href="https://www.linkedin.com/company/risolto-consulting/">
-            <img style="max-height: 32px;" src="linkedin_icon.png" />
-          </a>
+          <span target="_blank" href="https://www.linkedin.com/company/risolto-consulting/">
+            <img src="linkedin_icon.png" width="60" height="60">
+          </span>
         </div>
       </div>
     </div>
@@ -61,8 +56,6 @@
   <div class="oe_row oe_spaced" style="max-width: 800px;">
     <div class="oe_demo">
       <h3 class="oe_slogan">Step 1: Install the module (r_so_multi_warehouse)</h3>
-    </div>
-    <div class="oe_demo oe_screenshot">
     </div>
   </div>
 
@@ -96,7 +89,7 @@
 
   <div class="oe_row oe_spaced" style="max-width: 800px;">
     <div class="oe_demo">
-      <h3 class="oe_slogan">Step 4: Step 4: After confirming the sale, it will create deliveries based on the selected warehouses.</h3>
+      <h3 class="oe_slogan">Step 4: After confirming the sale, it will create deliveries based on the selected warehouses.</h3>
     </div>
     <div class="oe_demo oe_screenshot">
       <a
@@ -105,6 +98,17 @@
       >
         <img src="Delivery_Orders_from_sale_line.png"/>
       </a>
+    </div>
+  </div>
+
+    <div class="oe_row oe_spaced" style="max-width: 800px;">
+    <div class="oe_demo">
+      <h4 class="oe_slogan">
+        <a target="_blank" href="https://www.risolto.co.uk/appointment/5">Schedule a Free 30 min Consultation with an Expert</a>
+      </h4>
+      <h4 class="oe_slogan">
+        <a href="https://www.risolto.co.uk/contact">Click to contact us</a> for Additional Information
+      </h4>
     </div>
   </div>
 </section>
