--- a/r_so_multi_warehouse/static/description/index.html
+++ b/r_so_multi_warehouse/static/description/index.html
@@ -14,10 +14,10 @@
           <li>After confirming the sales order, it automatically generates delivery orders based on the selected warehouse for each line.</li>
         </ul>
 
-        <h4>For Odoo Consultation in the UK</h4>
+        <h4>To know more about our Consultation Services</h4>
         <ul>
           <li>
-            <a href="https://www.risolto.co.uk/uk/odoo-consulting">Click here</a> for any Odoo consultation services
+            Follow this link https://risolto.co.uk/uk/odoo-consulting
           </li>
         </ul>
       </div>
@@ -30,13 +30,13 @@
         </h2></br>
         
         <div style="display: inline-block;">
-          <a href="https://www.risolto.co.uk/appointment/5" target="_blank">
-            <h4
-              class="mt16 mb0"
-              style="padding: 16px 45px;text-transform: uppercase;background-color:#E59500;text-align: center;box-shadow: 2px 1px 12px 3px #ece6e6;border-radius: 10px;color: #fff;font-weight: 700;"
+          <a href="https://www.risolto.co.uk/appointment/5" target="_abc">
+            <button
+              class="btn btn-primary mt-4"
+              style="background-color: #E59500; text-transform: uppercase; font-weight: 700; border-radius: 10px; color: #fff;"
             >
-              Get a Free 30 min Consultation. Now!.
-            </h4>
+              Get a Free 30 min Consultation Now!
+            </button>
           </a>
           <div>risolto.co.uk</div>
         </div>
@@ -44,16 +44,16 @@
 
       <div class="row" style="display: block;margin-top:10px;text-align:center;">
         <!--<div style="display: inline-block;">
-          <a target="_blank" href="https://www.facebook.com/cetmixteam/"
+          <a target="_abc" href="https://www.facebook.com/cetmixteam/"
             ><img
               style="max-height:32px;"
               src="https://demo.cetmix.com/cetmix_demo/static/src/images/fb.png"
-          /></a>-->
-        </div>
-        <div style="display: flex; justify-content: center; align-items: center;">
-          <span target="_blank" href="https://www.linkedin.com/company/risolto-consulting/">
+          /></a>
+        </div>-->
+        <div class="d-flex justify-content-center align-items-center">
+          <a href="https://www.linkedin.com/company/risolto-consulting/" target="_abc">
             <img src="linkedin_icon.png" width="60" height="60">
-          </span>
+          </a>
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
     </div>
     <div class="oe_demo oe_screenshot">
       <a
-        target="_blank"
+        target="_abc"
         href="#"
       >
         <img src="sale_order_line_wh.png"/>
@@ -85,7 +85,7 @@
     </div>
     <div class="oe_demo oe_screenshot">
       <a
-        target="_blank"
+        target="_abc"
         href="#"
       >
         <img src="sale_order_line_av_qty.png"/>
@@ -99,7 +99,7 @@
     </div>
     <div class="oe_demo oe_screenshot">
       <a
-        target="_blank"
+        target="_abc"
         href="#"
       >
         <img src="Delivery_Orders_from_sale_line.png"/>
@@ -110,7 +110,7 @@
     <div class="oe_row oe_spaced" style="max-width: 800px;">
     <div class="oe_demo">
       <h4 class="oe_slogan">
-        <a target="_blank" href="https://www.risolto.co.uk/appointment/5">Schedule a Free 30 min Consultation with an Expert</a>
+        <a target="_abc" href="https://www.risolto.co.uk/appointment/5">Book a Free 30-Minute Expert Consultation</a>
       </h4>
       <h4 class="oe_slogan">
         <a href="https://www.risolto.co.uk/contact">Click to contact us</a> for Additional Information
