--- a/r_so_multi_warehouse/static/description/index.html
+++ b/r_so_multi_warehouse/static/description/index.html
@@ -1,56 +1,43 @@
 <section class="oe_container">
   <div class="oe_row oe_spaced" style="max-width: 800px;">
-    <div class="oe_span12">
-      <h2 class="oe_slogan" style="color:#840032; text-align: center;">
+    <div class="oe_span12 text-center">
+      <h2 class="oe_slogan" style="color: #840032;">
         Sales Order with Multi-Warehouse Sources
       </h2>
-      <div class="oe_demo" style="border:none;">
-        <h4>Main features</h4>
+      <div class="oe_demo" style="border: none;">
+        <h4>Main Features</h4>
         <ul>
           <li>Enables selection of various warehouses for individual products within sales order lines.</li>
-          <li>
-            After confirming the sales order, it generates delivery orders and updates quantity availability based on the selected source warehouse.
-          </li>
+          <li>After confirming the sales order, it generates delivery orders and updates quantity availability based on the selected source warehouse.</li>
           <li>After confirming the sales order, it automatically generates delivery orders based on the selected warehouse for each line.</li>
         </ul>
 
-        <h4>To know more about our Consultation Services</h4>
+        <h4>For More Information About Our Consultation Services</h4>
         <ul>
-          <li>
-            Follow this link https://risolto.co.uk/uk/odoo-consulting
-          </li>
+          <li>Follow this link: <a href="https://risolto.co.uk/uk/odoo-consulting">https://risolto.co.uk/uk/odoo-consulting</a></li>
         </ul>
       </div>
-      <div
-        class="row"
-        style="display: block;margin: 0 auto;width: 100%;text-align: center;"
-      >
-        <h2 style="text-align: center;">
-          Looking for Consultation, Support, Customization, or Partnership?
-        </h2></br>
-        
-        <div style="display: inline-block;">
-          <a href="https://www.risolto.co.uk/appointment/5" target="_abc">
-            <button
-              class="btn btn-primary mt-4"
-              style="background-color: #E59500; text-transform: uppercase; font-weight: 700; border-radius: 10px; color: #fff;"
-            >
-              Get a Free 30 min Consultation Now!
-            </button>
-          </a>
-          <div>risolto.co.uk</div>
-        </div>
+
+      <h2>
+        Looking for Consultation, Support, Customization, or Partnership?
+      </h2>
+
+      <div class="d-inline-block mt-4">
+        <a href="https://www.risolto.co.uk/appointment/5" target="_abc">
+          <button class="btn btn-primary" style="background-color: #E59500; text-transform: uppercase; font-weight: 700; border-radius: 10px; color: #fff;">
+            Get a Free 30-Minute Consultation Now!
+          </button>
+        </a>
+        <div>risolto.co.uk</div>
       </div>
 
-      <div class="row" style="display: block;margin-top:10px;text-align:center;">
-        <!--<div style="display: inline-block;">
-          <a target="_abc" href="https://www.facebook.com/cetmixteam/"
-            ><img
-              style="max-height:32px;"
-              src="https://demo.cetmix.com/cetmix_demo/static/src/images/fb.png"
-          /></a>
+      <div class="text-center mt-4">
+        <!--<div class="d-inline-block">
+          <a href="https://www.facebook.com/cetmixteam/" target="_abc">
+            <img src="https://demo.cetmix.com/cetmix_demo/static/src/images/fb.png" style="max-height: 32px;">
+          </a>
         </div>-->
-        <div class="d-flex justify-content-center align-items-center">
+        <div class="d-inline-block">
           <a href="https://www.linkedin.com/company/risolto-consulting/" target="_abc">
             <img src="linkedin_icon.png" width="60" height="60">
           </a>
@@ -61,59 +48,50 @@
 
   <div class="oe_row oe_spaced" style="max-width: 800px;">
     <div class="oe_demo">
-      <h3 class="oe_slogan">Step 1: Install the module (r_so_multi_warehouse)</h3>
+      <h3 class="oe_slogan">Step 1: Install the Module (r_so_multi_warehouse)</h3>
     </div>
   </div>
 
   <div class="oe_row oe_spaced" style="max-width: 800px;">
     <div class="oe_demo">
-      <h3 class="oe_slogan">Step 2: Sale order lines will display a 'Warehouse' column.</h3>
+      <h3 class="oe_slogan">Step 2: Sale Order Lines Will Display a 'Warehouse' Column.</h3>
     </div>
     <div class="oe_demo oe_screenshot">
-      <a
-        target="_abc"
-        href="#"
-      >
-        <img src="sale_order_line_wh.png"/>
+      <a target="_abc" href="#">
+        <img src="sale_order_line_wh.png" alt="Screenshot">
       </a>
     </div>
   </div>
 
   <div class="oe_row oe_spaced" style="max-width: 800px;">
     <div class="oe_demo">
-      <h3 class="oe_slogan">Step 3: Quantity availability updates based on the selected warehouse.</h3>
+      <h3 class="oe_slogan">Step 3: Quantity Availability Updates Based on the Selected Warehouse.</h3>
     </div>
     <div class="oe_demo oe_screenshot">
-      <a
-        target="_abc"
-        href="#"
-      >
-        <img src="sale_order_line_av_qty.png"/>
+      <a target="_abc" href="#">
+        <img src="sale_order_line_av_qty.png" alt="Screenshot">
       </a>
     </div>
   </div>
 
   <div class="oe_row oe_spaced" style="max-width: 800px;">
     <div class="oe_demo">
-      <h3 class="oe_slogan">Step 4: After confirming the sale, it will create deliveries based on the selected warehouses.</h3>
+      <h3 class="oe_slogan">Step 4: After Confirming the Sale, It Will Create Deliveries Based on the Selected Warehouses.</h3>
     </div>
     <div class="oe_demo oe_screenshot">
-      <a
-        target="_abc"
-        href="#"
-      >
-        <img src="Delivery_Orders_from_sale_line.png"/>
+      <a target="_abc" href="#">
+        <img src="Delivery_Orders_from_sale_line.png" alt="Screenshot">
       </a>
     </div>
   </div>
 
-    <div class="oe_row oe_spaced" style="max-width: 800px;">
+  <div class="oe_row oe_spaced" style="max-width: 800px;">
     <div class="oe_demo">
       <h4 class="oe_slogan">
-        <a target="_abc" href="https://www.risolto.co.uk/appointment/5">Book a Free 30-Minute Expert Consultation</a>
+        <a href="https://www.risolto.co.uk/appointment/5">Book a Free 30-Minute Expert Consultation</a>
       </h4>
       <h4 class="oe_slogan">
-        <a href="https://www.risolto.co.uk/contact">Click to contact us</a> for Additional Information
+        <a href="https://www.risolto.co.uk/contact">Click to Contact Us</a> for Additional Information
       </h4>
     </div>
   </div>
