--- a/r_so_multi_warehouse/static/description/index.html
+++ b/r_so_multi_warehouse/static/description/index.html
@@ -22,12 +22,10 @@
         Looking for Consultation, Support, Customization, or Partnership?
       </h2>
 
+      <a href="mailto:info@setuconsulting.com?subject=Cash Forecasting Version 15.0 - New Purchase" class="btn btn-info mx-2 pr-sm-4 mb-2 mb-lg-0" style="text-transform:uppercase; font-size:14px"><i class="fa fa-envelope-square mr-sm-2" style="font-size:20px; vertical-align:middle"></i> <span class="d-none d-sm-inline">Get a Free 30 min Consultation. Now!.</span></a>
+
       <div class="d-inline-block mt-4">
-        <a href="https://www.risolto.co.uk/appointment/5" target="_abc">
-          <button class="btn btn-primary" style="background-color: #E59500; text-transform: uppercase; font-weight: 700; border-radius: 10px; color: #fff;">
-            Get a Free 30-Minute Consultation Now!
-          </button>
-        </a>
+
         <div>risolto.co.uk</div>
       </div>
 
@@ -88,10 +86,7 @@
   <div class="oe_row oe_spaced" style="max-width: 800px;">
     <div class="oe_demo">
       <h4 class="oe_slogan">
-        <a href="https://www.risolto.co.uk/appointment/5">Book a Free 30-Minute Expert Consultation</a>
-      </h4>
-      <h4 class="oe_slogan">
-        <a href="https://www.risolto.co.uk/contact">Click to Contact Us</a> for Additional Information
+        <a href="https://www.risolto.co.uk/contact">To Contact Us</a> for Additional Information
       </h4>
     </div>
   </div>
