--- a/r_so_multi_warehouse/static/description/index.html
+++ b/r_so_multi_warehouse/static/description/index.html
@@ -22,12 +22,7 @@
         Looking for Consultation, Support, Customization, or Partnership?
       </h2>
 
-      <a href="mailto:info@setuconsulting.com?subject=Cash Forecasting Version 15.0 - New Purchase" class="btn btn-info mx-2 pr-sm-4 mb-2 mb-lg-0" style="text-transform:uppercase; font-size:14px"><i class="fa fa-envelope-square mr-sm-2" style="font-size:20px; vertical-align:middle"></i> <span class="d-none d-sm-inline">Get a Free 30 min Consultation. Now!.</span></a>
-
-      <div class="d-inline-block mt-4">
-
-        <div>risolto.co.uk</div>
-      </div>
+      <a href="https://www.risolto.co.uk/appointment/5" class="btn btn-info mx-2 pr-sm-4 mb-2 mb-lg-0" style="background-color: #E59500;text-transform:uppercase; font-size:14px"><i class="fa fa-envelope-square mr-sm-2" style="font-size:20px; vertical-align:middle"></i> <span class="d-none d-sm-inline">Get a Free Consultation.</span></a>
 
       <div class="text-center mt-4">
         <!--<div class="d-inline-block">
@@ -35,11 +30,9 @@
             <img src="https://demo.cetmix.com/cetmix_demo/static/src/images/fb.png" style="max-height: 32px;">
           </a>
         </div>-->
-        <div class="d-inline-block">
-          <a href="https://www.linkedin.com/company/risolto-consulting/" target="_abc">
+        <a href="https://www.linkedin.com/company/risolto-consulting/" target="_abc">
             <img src="linkedin_icon.png" width="60" height="60">
           </a>
-        </div>
       </div>
     </div>
   </div>
@@ -86,7 +79,7 @@
   <div class="oe_row oe_spaced" style="max-width: 800px;">
     <div class="oe_demo">
       <h4 class="oe_slogan">
-        <a href="https://www.risolto.co.uk/contact">To Contact Us</a> for Additional Information
+        <a href="https://www.risolto.co.uk/contact" class="btn btn-info mx-2 pr-sm-4 mb-2 mb-lg-0" style="background-color: #E59500;text-transform:uppercase; font-size:14px"><i class="fa fa-envelope-square mr-sm-2" style="font-size:20px; vertical-align:middle"></i> <span class="d-none d-sm-inline">Contact Us for an Additional Information</span></a>
       </h4>
     </div>
   </div>
