--- a/r_so_multi_warehouse/static/description/index.html
+++ b/r_so_multi_warehouse/static/description/index.html
@@ -23,7 +23,7 @@
       </h2>
 
       <a href="https://www.risolto.co.uk/appointment/5" class="btn btn-info mx-2 pr-sm-4 mb-2 mb-lg-0" style="background-color: #E59500;text-transform:uppercase; font-size:14px"><i class="fa fa-envelope-square mr-sm-2" style="font-size:20px; vertical-align:middle"></i> <span class="d-none d-sm-inline">Get a Free Consultation.</span></a>
-      <h4>https://www.risolto.co.uk/appointment/5</h4>
+      <h6>https://www.risolto.co.uk/appointment/5</h6>
 
       <div class="text-center mt-4">
         <!--<div class="d-inline-block">
@@ -34,7 +34,7 @@
         <a href="https://www.linkedin.com/company/risolto-consulting/" target="_abc">
             <img src="linkedin_icon.png" width="60" height="60">
           </a>
-          <h4>https://www.linkedin.com/company/risolto-consulting</h4>
+          <h6>https://www.linkedin.com/company/risolto-consulting</h6>
       </div>
     </div>
   </div>
@@ -78,12 +78,10 @@
     </div>
   </div>
 
-  <div class="oe_row oe_spaced" style="max-width: 800px;">
+  <div class="oe_row oe_spaced text-center" style="max-width:800px">
     <div class="oe_demo">
-      <h4 class="oe_slogan">
-        <a href="https://www.risolto.co.uk/contact" class="btn btn-info mx-2 pr-sm-4 mb-2 mb-lg-0" style="background-color: #E59500;text-transform:uppercase; font-size:14px"><i class="fa fa-envelope-square mr-sm-2" style="font-size:20px; vertical-align:middle"></i> <span class="d-none d-sm-inline">Contact Us for an Additional Information</span></a>
-      </h4>
-      <h4>https://www.risolto.co.uk/contact</h4>
+      <a href="https://www.risolto.co.uk/contact" class="btn btn-info mx-2 pr-sm-4 mb-2 mb-lg-0" style="background-color: #E59500;text-transform:uppercase; font-size:14px"><i class="fa fa-envelope-square mr-sm-2" style="font-size:20px; vertical-align:middle"></i> <span class="d-none d-sm-inline">Contact Us for an Additional Information</span></a>
+      <h6>https://www.risolto.co.uk/contact</h6>
     </div>
   </div>
 </section>
